# jns42-generator-rs

./: Cargo.toml  README.md  cspell.json
.github/workflows/: test.yml
src/: lib.rs  main.rs  meta_schema_id.rs  program.rs
src/generators/: cargo_toml.rs  file.rs  lib_rs.rs  mod.rs  models_rs.rs  package.rs  validators_rs.rs
src/programs/: mod.rs  package.rs
src/schemas/: interpreter_common.rs  interpreter_context.rs  interpreter_strategy.rs  loader.rs  loader_context.rs  loader_strategy.rs  manager.rs  meta.rs  meta_schema_id.rs  mod.rs  selectors.rs
src/schemas/draft_04/: interpreter.rs  loader.rs  selectors.rs
src/schemas/draft_06/: loader.rs  mod.rs  selectors.rs
src/schemas/draft_07/: interpreter.rs  loader.rs  mod.rs
src/schemas/draft_2019_09/: interpreter.rs  loader.rs
src/schemas/draft_2020_12/: interpreter.rs  loader.rs  meta.rs  selectors.rs
src/utils/: json_pointer.rs  mod.rs  namer.rs  value_rc.rs
