[package]
name = "goodschema"
version = "0.0.0"
edition = "2021"
description = "generate structs and validators from json schema"
license = "ISC"
authors = ["Elmer Bulthuis"]
homepage = "https://www.goodschema.org"
keywords = ["good", "json", "schema"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cargo_toml = "0.15.2"
clap = { version = "4.1.14", features = ["derive"] }
quote = "1.0.26"
rust-format = { version = "0.3.4", features = ["token_stream"] }
serde = "1.0.158"
serde_json = "1.0.94"
toml = "0.7.3"
url = "2.3.1"
urlencoding = "2.1.2"

[lib]
name = "goodschema"
path = "src/lib.rs"

[[bin]]
name = "goodschema"
path = "src/main.rs"
