[package]
name = "goodschema"
version = "0.0.0"
edition = "2021"
description = "generate structs and validators from json schema"
license = "ISC"
authors = ["Elmer Bulthuis"]
homepage = "https://www.goodschema.org"
keywords = ["good", "json", "schema"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cargo_toml = "0.15"
clap = { version = "4.1", features = ["derive"] }
quote = "1.0"
rust-format = { version = "0.3", features = ["token_stream"] }
radix_fmt = "1.0"
serde = "1.0"
serde_json = "1.0"
toml = { version = "0.7", features = ["preserve_order"] }
url = "2.3"
urlencoding = "2.1"
Inflector = "0.11"

[lib]
path = "src/lib.rs"

[[bin]]
name = "goodschema"
path = "src/main.rs"
