[package]
name = "jns42_generator"
version = "0.0.0"
edition = "2021"
description = "Generate structs and validators from json schema"
license = "ISC"
authors = ["Elmer Bulthuis"]
homepage = "https://www.JsonSchema42.org"
keywords = ["json", "schema", "generator"]
repository = "git@github.com:JsonSchema42/jns42-generator-ts"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cargo_toml = "0.15"
clap = { version = "4.1", features = ["derive"] }
quote = "1.0"
rust-format = { version = "0.3", features = ["token_stream"] }
serde = "1.0"
serde_json = "1.0"
toml = { version = "0.7", features = ["preserve_order"] }
url = "2.3"
urlencoding = "2.1"
Inflector = "0.11"
regex = "1.7.3"
proc-macro2 = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jns42_generator"
path = "src/main.rs"
